# internal/routers/users.go
@@ -24,6 +24,7 @@ func usersRouter(group *gin.RouterGroup, h handler.UsersHandler) {
 	// If jwt authentication is not required for all routes, authentication middleware can be added
 	// separately for only certain routes. In this case, g.Use(middleware.Auth()) above should not be used.
 	g.POST("/login", h.Login)
+	g.POST("/register", h.Register)                   // [post] /api/v1/users/register
 	g.POST("/", h.Create, middleware.Auth())          // [post] /api/v1/users
 	g.DELETE("/:id", h.DeleteByID, middleware.Auth()) // [delete] /api/v1/users/:id
 	g.PUT("/:id", h.UpdateByID, middleware.Auth())    // [put] /api/v1/users/:id
